--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id "kotlin-parcelize"
+    id 'com.google.gms.google-services'
+    id("androidx.navigation.safeargs")
 }
 
 android {
@@ -45,6 +47,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.test:core-ktx:1.4.0'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.2'
+    implementation 'com.google.firebase:firebase-perf-ktx:20.0.3'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -63,4 +68,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0-alpha02'
     //Expandable Text View
     implementation 'com.ms-square:expandableTextView:0.1.4'
+    //Room Database
+    implementation "androidx.room:room-runtime:2.3.0"
+    annotationProcessor "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.compose.runtime:runtime-livedata:1.0.0-alpha11"
 }
